fix(css): Align items on the business card. Add styling for the image

--- a/business_card/styles.css
+++ b/business_card/styles.css
@@ -82,6 +82,7 @@
 
 .main-card{
     display:flex;
+    align-items: center;
     flex-direction: column;
     border: 1px solid white;
     border-radius: 10px;
@@ -89,6 +90,14 @@
     height: 550px;
     padding:10px;
     gap:5px;
+}
+
+.example-person{
+    height:150px;
+    width:150px;
+    border-radius: 50%;
+    object-fit: cover;  
+    object-position: center;
 }
 
 .socials-container{
